--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,9 @@ header {
   background-color: rgb(255, 0, 0);
   height: 80px;
 }
+h3,p {
+  text-align: center;
+}
 
 #Score {
   font-size: 50px;
